# conways-game

./: README.md  World.h  docs.tex  main.cpp
conways-game/Blatt_02/: CMakeLists.txt  Cli.cpp  Cli.h  HLA_PR_Blatt_02.tex  UML Ex 02.dia  World.cpp  World.h  main.cpp
